fix(crd_watcher): add random api key to avoid ssrf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -170,6 +170,36 @@ http {
         location /api/ {
             access_log off;
             
+            # 验证内部 API 认证
+            access_by_lua_block {
+                local api_key_file = "/tmp/api.key"
+                local file = io.open(api_key_file, "r")
+                if not file then
+                    ngx.log(ngx.ERR, "Failed to read API key file: " .. api_key_file)
+                    ngx.status = 500
+                    ngx.say("Internal server error")
+                    ngx.exit(500)
+                end
+                
+                local expected_key = file:read("*line")
+                file:close()
+                
+                if not expected_key or expected_key == "" then
+                    ngx.log(ngx.ERR, "API key is empty")
+                    ngx.status = 500
+                    ngx.say("Internal server error")
+                    ngx.exit(500)
+                end
+                
+                local provided_key = ngx.var.http_x_api_key
+                if not provided_key or provided_key ~= expected_key then
+                    ngx.log(ngx.WARN, "API authentication failed from " .. (ngx.var.remote_addr or "unknown"))
+                    ngx.status = 401
+                    ngx.say("Unauthorized")
+                    ngx.exit(401)
+                end
+            }
+            
             # 更新路由
             location ~ ^/api/routes/update$ {
                 content_by_lua_block {
